# Smart-Backup

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore-semgrep  Dockerfile  Makefile  README.md  api.py  cloud_manager.py  copier.py  crypter.py  docker-compose.yml  encryptor.py  example.env  hasher.py  main.py  manager.py  pyproject.toml  requirements-dev.txt  requirements-sbom.txt  requirements.txt  restore.py  runner.py  scanner.py  sonar-project.properties  utils.py
.github/: CODEOWNERS
.github/workflows/: CI-start.yaml
docs/: adr.md  ci-overview.md  incident-response.md  risk-acceptance.md  threat-model.md
k8s/: namespace.yaml  networkpolicy.yaml  pvc.yaml
k8s/api/: deployment.yaml  ingress.yaml  service.yaml
k8s/app/: deployment.yaml
k8s/minio/: deployment.yaml  service.yaml
log_analyzer/: detector.py  models.py
policy/: conftest.rego  docker.rego
storage/: base.py  s3.py
tests/: test_backup.py
